[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mona-openai"
version = "0.1.1"
authors = [
  { name="Itai Bar Sinai", email="itai@monalabs.io" },
]
description = "Integration client for monitoring OpenAI usage with Mona"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
keywords = ["OpenAI", "LLMs", "GPT", "Mona", "Monitoring", "AI"]
dynamic = ["dependencies"]

[project.urls]
"Homepage" = "https://github.com/monalabs/mona-openai"
"Bug Tracker" = "https://github.com/monalabs/mona-openai/issues"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.black]
line-length = 79
